--- a/index.css
+++ b/index.css
@@ -19,8 +19,8 @@ body{
     font-size: 15;
     font-family: 'League Spartan', sans-serif;
     font-weight: 400;
-    background: url(.//images/bg-pattern-top-desktop.svg), 
-                url(.//images/bg-pattern-bottom-desktop.svg);
+    background: url(bg-pattern-top-desktop.svg), 
+                url(bg-pattern-bottom-desktop.svg);
     background-repeat: no-repeat;
     background-position: left top, right bottom;
 }
@@ -146,8 +146,8 @@ span{
 @media screen and (max-width: 375px) {
     body{
         padding: 5.125rem 1.5rem;
-        background: url(.//images/bg-pattern-top-mobile.svg),
-        url(.//images/bg-pattern-bottom-mobile.svg);
+        background: url(bg-pattern-top-mobile.svg),
+                    url(bg-pattern-bottom-mobile.svg);
         background-repeat: no-repeat;
         background-position: top, bottom;
     }
